[FEAT] 카톡 이성재 1~4번 요구사항 수정